--- a/DSImager.Application/Views/FlatFrameDialog.xaml
+++ b/DSImager.Application/Views/FlatFrameDialog.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:DSImager.Application.Views"
         xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
+        xmlns:qc="http://QuickConverter.CodePlex.com/"
         xmlns:converters="clr-namespace:DSImager.Application.Converters"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         Title="Take flat frames" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
         BorderBrush="Black" BorderThickness="1"
@@ -18,11 +20,12 @@
         <converters:InvertBooleanConverter x:Key="InvertBooleanConverter"></converters:InvertBooleanConverter>
         <converters:BoolMultiAndConverter x:Key="BoolMultiConverter"></converters:BoolMultiAndConverter>
         <converters:ImageFileFormatStringConverter x:Key="ImageFileFormatStringConverter"></converters:ImageFileFormatStringConverter>
+        <converters:VisibilityConverter x:Key="VisibilityConverter"></converters:VisibilityConverter>
     </Window.Resources>
     <StackPanel d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type viewModels:FlatFrameDialogViewModelDT}}" Margin="10">
         <DockPanel Margin="0,0,0,10" Background="{DynamicResource GrayBrush8}">
             <fa:ImageAwesome Foreground="{DynamicResource TextBrush}" Icon="InfoCircle" Height="16" Margin="10" VerticalAlignment="Top"></fa:ImageAwesome>
-            <TextBox IsReadOnly="True" IsReadOnlyCaretVisible="False" Background="Transparent" Text="Cover your optics with for example a white t-shirt and point your telescope at a flat light source. If you wish to use the screen as the light source, use the &quot;White Mode&quot; to turn the user interface practically white. In White Mode a flat white overlay will cover the whole screen when the capture begins." TextWrapping="Wrap" BorderBrush="Transparent"/>
+            <TextBox IsReadOnly="True" IsReadOnlyCaretVisible="False" Background="Transparent" Text="Cover your optics with for example a white t-shirt and point your telescope at a flat light source. If you wish to use the screen as the light source, use the &quot;White Mode&quot; to turn the user interface practically white to enable you to use it as your flat light source. Also when capturing exposures in White Mode a flat plain white overlay will cover the whole screen when the capture begins." TextWrapping="Wrap" BorderBrush="Transparent"/>
         </DockPanel>
         <Button Content="Toggle White Mode" Margin="0,0,0,20" Command="{Binding ToggleWhiteModeCommand}"></Button>
         <Grid>
@@ -82,11 +85,12 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="120"></ColumnDefinition>
-                <ColumnDefinition Width="140"></ColumnDefinition>
+                <ColumnDefinition Width="90"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Label Content="Exposure (s)"></Label>
-            <TextBox Grid.Column="1" Width="60" HorizontalAlignment="Left" Margin="0,0,0,10"></TextBox>
+            <TextBox Grid.Column="1" Width="60" HorizontalAlignment="Left" Margin="0,0,0,10" Text="{Binding Settings.ExposureTime, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <Label Grid.Column="2" Content="Set manually or use the auto-detect below"></Label>
         </Grid>
         <Label Content="Auto-Detect Exposure" Margin="0,10,0,10" Background="{DynamicResource GrayBrush8}"></Label>
         <Grid>
@@ -96,10 +100,15 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Label Content="Target ADU"></Label>
-            <TextBox Grid.Column="1" Width="120" HorizontalAlignment="Left" Margin="0,0,0,10"></TextBox>
+            <TextBox Grid.Column="1" Width="120" HorizontalAlignment="Left" Margin="0,0,0,10" Text="{Binding Settings.TargetADU, UpdateSourceTrigger=PropertyChanged}">
+            </TextBox>
             <StackPanel Grid.Column="2" Orientation="Horizontal">
-                <Label Content="20%"></Label>
-                <Label Content="(Max ADU 65535)"></Label>
+                <Label>
+                    <Label.Content>
+                        <qc:MultiBinding Converter="string.Format('{0:F}%', (double)$P0 / $P1 * 100.0)"  P0="{Binding Settings.TargetADU}" P1="{Binding MaxADU}"></qc:MultiBinding>
+                    </Label.Content>
+                </Label>
+                <Label Content="{Binding MaxADU}" ContentStringFormat="{}(Max ADU is {0})"></Label>
             </StackPanel>
         </Grid>
         <Grid>
@@ -108,17 +117,55 @@
                 <ColumnDefinition Width="90"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Label Content="Max Exp. to try(s)"></Label>
-            <TextBox Grid.Column="1" Width="60" HorizontalAlignment="Left" Margin="0,0,0,10"></TextBox>
-            <Button Grid.Column="2" Content="Run exposure auto-detection" Margin="0,0,0,10"></Button>
-            <Button Grid.Column="2" Content="Stop auto-detection" Margin="0,0,0,10"></Button>
+            <Label Content="Max Exp. to try (s)"></Label>
+            <TextBox Grid.Column="1" Text="{Binding Settings.MaxExposureToTry, UpdateSourceTrigger=PropertyChanged}" Width="60" HorizontalAlignment="Left" Margin="0,0,0,10"></TextBox>
+            <Button Grid.Column="2" Content="Run exposure auto-detection" Margin="0,0,0,10"
+                    Command="{Binding RunExposureAutoDetectionCommand}" Visibility="{Binding IsAutoDetecting, Converter={StaticResource VisibilityConverter}, ConverterParameter=False}">
+                <Button.IsEnabled>
+                    <qc:MultiBinding P0="{Binding Settings.MaxExposureToTry}" Converter="$P0 > 0"></qc:MultiBinding>
+                </Button.IsEnabled>
+            </Button>
+            <Button Grid.Column="2" Content="Stop auto-detection" Margin="0,0,0,10"
+                    Command="{Binding StopExposureAutoDetectionCommand}" Visibility="{Binding IsAutoDetecting, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}"></Button>
         </Grid>
-        <StackPanel Orientation="Horizontal">
-            <fa:ImageAwesome Foreground="{DynamicResource TextBrush}" Width="16" Icon="Camera" Margin="10"></fa:ImageAwesome><Label Margin="0,3,0,0" Content="Auto-detection complete, exposure value updated."></Label>
+        <StackPanel Orientation="Horizontal" Visibility="{Binding IsAutoDetecting, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
+            <fa:ImageAwesome Foreground="{DynamicResource TextBrush}" Icon="CircleOutlineNotch" SpinDuration="1" Spin="True" Width="16" Margin="10"></fa:ImageAwesome>
+            <Label Margin="0,3,0,0" Content="Sampling exposures..."></Label>
+            <Label Margin="0,3,0,0">
+                <Label.Content>
+                    <TextBlock>
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0}s resulted in {1:F}% of Max ADU">
+                                <Binding Path="LastSampleFrameInfo.ExposureTime"/>
+                                <Binding Path="LastSampleFrameInfo.AduPcnt" />
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                </Label.Content>
+            </Label>
         </StackPanel>
-        <Button Grid.Row="0" Margin="0,10,0,5" Content="Start calibration..."
-                    Command="{Binding StartCaptureCommand}"></Button>
-        <Button Grid.Row="1" Margin="0,0,0,5" Content="Cancel"
+        <DockPanel Visibility="{Binding HadFindException, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
+            <fa:ImageAwesome Foreground="{DynamicResource TextBrush}" Icon="Warning" Width="16" Margin="10" VerticalAlignment="Top"></fa:ImageAwesome>
+            <TextBlock Margin="0,6,0,0" Foreground="{DynamicResource TextBrush}" TextWrapping="Wrap">
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{}{0}">
+                        <Binding Path="FindExceptionMessage"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </DockPanel>
+        <StackPanel Orientation="Horizontal" Visibility="{Binding AutoDetectCompleted, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
+            <fa:ImageAwesome Foreground="{DynamicResource TextBrush}" Width="16" Icon="Camera" Margin="10"></fa:ImageAwesome>
+            <Label Margin="0,3,0,0" Content="Auto-detection complete, exposure value updated."></Label>
+        </StackPanel>
+        <Button Margin="0,10,0,5" Content="Start"
+                    Command="{Binding StartCaptureCommand}">
+            <Button.IsEnabled>
+                <qc:MultiBinding P0="{Binding IsAutoDetecting}" P1="{Binding Settings.SavePath}" P2="{Binding Settings.FileFormat}" P3="{Binding Settings.ExposureTime}" P4="{Binding Settings.FrameCount}"
+                                     Converter="$P4 > 0 ## !string.IsNullOrEmpty($P1) ## $P3 > 0 ## !string.IsNullOrEmpty($P2) ## $P0 == false"></qc:MultiBinding>
+            </Button.IsEnabled>
+        </Button>
+        <Button Margin="0,0,0,5" Content="Cancel"
                     Command="{Binding CancelCaptureCommand}"></Button>
 
     </StackPanel>
